syntax = "proto3";
option csharp_namespace = "Phorkus.Proto";

import "default.proto";
import "transaction.proto";
import "block.proto";
import "consensus.proto";
import "node.proto";

message HandshakeRequest {
    Node node = 1;
}

message HandshakeReply {
    Node node = 1;
}

message PingRequest {
    uint64 timestamp = 1;
}

message PingReply {
    uint64 timestamp = 1;
}

message GetBlocksByHashesRequest {
    repeated UInt256 block_hashes = 1;
}

message GetBlocksByHashesReply {
    repeated Block blocks = 1;
}

message GetBlocksByHeightRangeRequest {
    uint64 from_height = 1;
    uint64 to_height = 2;
}

message GetBlocksByHeightRangeReply {
    repeated UInt256 block_hashes = 1;
}

message GetTransactionsByHashesRequest {
    repeated UInt256 transaction_hashes = 1;
}

message GetTransactionsByHashesReply {
    repeated SignedTransaction transactions = 1;
}

message GetTransactionHashesByBlockHeightRequest {
    uint64 block_height = 1;
}

message GetTransactionHashesByBlockHeightReply {
    repeated UInt256 transaction_hashes = 1;
}

